fix: spa-127 secondary button spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -63,9 +63,7 @@ body {
 	}
 }
 
-a,
-a:focus,
-a:visited {
+a {
 	text-decoration: none;
 	display: block;
 	color: inherit;
