--- a/src/components/Form/style.module.scss
+++ b/src/components/Form/style.module.scss
@@ -6,8 +6,4 @@
 	flex-direction: column;
 
 	position: relative;
-
-	> * {
-		margin-bottom: 25px;
-	}
 }
