--- a/src/components/FormBottom/style.module.scss
+++ b/src/components/FormBottom/style.module.scss
@@ -1,7 +1,3 @@
 .bottom {
 	margin-top: auto;
-
-	> *:not(:last-child) {
-		margin-bottom: 15px;
-	}
 }
