--- a/src/components/SimpleButton/style.module.scss
+++ b/src/components/SimpleButton/style.module.scss
@@ -9,4 +9,7 @@
 	color: colors.$darkblue;
 	font-size: 18px;
 	text-align: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
